upgrade autoconf dependancy to 2.50.
Mon Aug 25 16:11:36 2003  Tim Janik  <timj@gtk.org>

        * autogen.sh: upgrade autoconf dependancy to 2.50.

        * acbeast.m4: add AC_DIVERT_BEFORE_HELP() taken from gtk+,
        to define stuff in configure.in available for help generation.

        * configure.in: port over to autoconf2.57, use configure.h
        as new generated configuartion file.

        * Makefile.am:
        * topconfig.h: provide package-wide configuration results.

        * */*.c: include "topconfig.h" now.

svn path=/trunk/; revision=1239

--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -32,7 +32,7 @@ bse-zfile.c:	zintern $(srcdir)/*.bse # bse-zfile.h
 #	&& rm -f xgen-bzh
 
 # need -I$(top_srcdir) for <gsl/gsldefs.h>
-# need -I. for "../PKG_config.h"
+# need -I. for "../topconfig.h"
 
 noinst_PROGRAMS = zintern
 progs_LDADD = $(top_builddir)/sfi/libsfi.la $(LIBZ)
