--- a/.cvsignore
+++ b/.cvsignore
@@ -5,11 +5,12 @@ config.log
 stamp-h
 stamp-h.in
 libtool
+configure
+configure.h
+configure.h.in
 config.status
 config.cache
-configure
-PKG_config.h.in
-PKG_config.h
-PKG_paths.h
+autom4te.cache
+make-paths.h
 sfi.pc
 bse.pc
