adapted to new bseplugin.h macros. enum generation doesn't work anymore.
Mon Aug 25 19:27:04 2003  Tim Janik  <timj@gtk.org>

        * Makefile.am:
        * listplugins.sh: adapted to new bseplugin.h macros.
        enum generation doesn't work anymore.

        * bseiirfilter.[hc]: hand-coded enum exports, this is the only
        C plugin left that uses enum values.

        * *.[hc]:
        * freeverb/bsefreeverb.[hc]: ported all plugins to the new
        export macros.

        * icons/Makefile.icons:
        * icons/*.png: added png files for the images used.

        * icons/*.c: regenerated C sources from *.png files with:
        gdk-pixbuf-csource --name=VariableName foo.png > foo.c

svn path=/trunk/; revision=1242

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -45,6 +45,8 @@ EXTRA_CFILES = $(strip		\
 Makefile.plugins: $(srcdir)/listplugins.sh $(PLUGIN_CFILES) Makefile.am
 	$(srcdir)/listplugins.sh $(PLUGIN_CFILES) >$@
 
+plugins_built_sources =
+
 EXTRA_DIST += $(strip \
         $(EXTRA_HEADERS) \
         $(EXTRA_CFILES) \
