--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -1,6 +1,5 @@
 ## Generated data (by make Makefile.icons)
 icon_list += adsr.c
-icon_list += ampmix.c
 icon_list += any.c
 icon_list += atan.c
 icon_list += canyon.c
@@ -8,11 +7,12 @@ icon_list += chorus.c
 icon_list += drum.c
 icon_list += filter.c
 icon_list += genosc.c
+icon_list += mixer.c
+icon_list += multiply.c
 icon_list += noise.c
 icon_list += organ.c
 icon_list += osc.c
 icon_list += pipe.c
-icon_list += prod.c
 icon_list += reverb.c
 icon_list += sequencer.c
 icon_list += sine.c
@@ -20,6 +20,20 @@ icon_list += speaker.c
 icon_list += strings.c
 icon_list += sub.c
 icon_list += sum.c
+icon_list += adsr.png
+icon_list += ampmix.png
+icon_list += atan.png
+icon_list += canyon.png
+icon_list += drum.png
+icon_list += filter.png
+icon_list += noise.png
+icon_list += organ.png
+icon_list += prod.png
+icon_list += reverb.png
+icon_list += sequencer.png
+icon_list += strings.png
+icon_list += sub.png
+icon_list += sum.png
 icon_list += adsr.xcf
 icon_list += ampmix.xcf
 icon_list += atan.xcf
