--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -3,7 +3,6 @@ icon_list += adsr.c
 icon_list += any.c
 icon_list += atan.c
 icon_list += canyon.c
-icon_list += chorus.c
 icon_list += drum.c
 icon_list += filter.c
 icon_list += genosc.c
@@ -24,6 +23,7 @@ icon_list += adsr.png
 icon_list += ampmix.png
 icon_list += atan.png
 icon_list += canyon.png
+icon_list += chorus.png
 icon_list += drum.png
 icon_list += filter.png
 icon_list += noise.png
@@ -38,6 +38,7 @@ icon_list += adsr.xcf
 icon_list += ampmix.xcf
 icon_list += atan.xcf
 icon_list += canyon.xcf
+icon_list += chorus.xcf
 icon_list += cyria-filter.xcf
 icon_list += drum.xcf
 icon_list += filter.xcf
