fix hinting for trigger property.
Thu Sep  4 15:13:55 2003  Tim Janik  <timj@gtk.org>

        * davxtalstrings.c: fix hinting for trigger property.

        * icons/eguitar.png, icons/eguitar.xcf: new icon.

svn path=/trunk/; revision=1257

--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -25,6 +25,7 @@ icon_list += atan.png
 icon_list += canyon.png
 icon_list += chorus.png
 icon_list += drum.png
+icon_list += eguitar.png
 icon_list += filter.png
 icon_list += noise.png
 icon_list += organ.png
@@ -41,6 +42,7 @@ icon_list += canyon.xcf
 icon_list += chorus.xcf
 icon_list += cyria-filter.xcf
 icon_list += drum.xcf
+icon_list += eguitar.xcf
 icon_list += filter.xcf
 icon_list += genosc.xcf
 icon_list += noise.xcf
