cvs copy of bsemidireceiver.c.
Mon Sep  8 00:11:45 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsemidireceiver.cc: cvs copy of bsemidireceiver.c.

	* bsemidireceiver.c: removed.

	* bsemidireceiver.*: adapted to compile with a C++ compiler.
	made _BseMidiReceiver private.

svn path=/trunk/; revision=1268

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -73,7 +73,7 @@ bse_c_sources = $(strip \
 	bseglobals.c		bseglue.c		bseitem.c			bsejanitor.c \
 	bsemain.c		bsemath.c		bsemidiicontroller.c		bsemididevice.c \
 	bsemididevice-null.c	bsemididevice-oss.c	bsemidievent.c			bsemidinotifier.c \
-	bsemidireceiver.c	bsemidisynth.c		bseobject.c			bsepart.c \
+	bsemidireceiver.cc	bsemidisynth.c		bseobject.c			bsepart.c \
 	bsepcminput.c		bsepcmoutput.c		bseparam.c			bseparasite.c \
 	bsepcmdevice.c		bsepcmdevice-oss.c	bseplugin.c			bseladspa.c \
 	bseprocedure.c		bseproject.c		bsescripthelper.c		bseserver.c \
