get section 1 manual pages to install and build properly.
Sun Sep 21 02:34:26 2003  Tim Janik  <timj@gtk.org>

        * docs/generated/Makefile.am: get section 1 manual pages to
        install and build properly.

        * docs/bse-plugin-generator.1.texi: started manual page for
        the bse plugin generator.

svn path=/trunk/; revision=1282

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,8 +1,9 @@
 SUBDIRS = generated
 
-texi_docs = $(strip							\
-	WRITING.3.texi		beast-index.texi	faq.texi	\
-	quickstart.texi		release-notes.texi			\
+texi_docs = $(strip								\
+	WRITING.3.texi			beast-index.texi	faq.texi	\
+	quickstart.texi			release-notes.texi			\
+	bse-plugin-generator.1.texi						\
 )
 extra_docs = $(strip					\
 	bse-categories.txt	interpolation.txt	\
