Define SFIDL_PATH_STDINC in make-paths.h.
Sun Sep 21 03:50:13 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* configure.in Makefile.am: Define SFIDL_PATH_STDINC in make-paths.h.

svn path=/trunk/; revision=1285

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,6 +23,7 @@ make-paths.h: $(top_builddir)/config.status Makefile
 	cd $(top_builddir) \
 	&& echo "/* Generated data from $< (by make $@) */" > xgen-pph \
 	&& echo >> xgen-pph \
+	&& echo "#define SFIDL_PATH_STDINC     \"${sfidlstdincdir}\"" >> xgen-pph \
 	&& echo "#define BSE_PATH_PLUGINS      \"${bseplugindir}\"" >> xgen-pph \
 	&& echo "#define BSE_PATH_LADSPA       \"${bseladspadir}\"" >> xgen-pph \
 	&& echo "#define BSE_PATH_SCRIPTS      \"${bsescriptdir}\"" >> xgen-pph \
