include bse.idl.
Sun Sep 21 04:42:33 2003  Tim Janik  <timj@gtk.org>

        * Makefile.am (libbseinclude_HEADERS): include bse.idl.

svn path=/trunk/; revision=1289

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -178,7 +178,7 @@ $(srcdir)/bsetype.c: bsegentypes.c bsegentype_array.c
 # setup sources, their dependancies and commands
 #
 bse_h_sources = $(bse_private_h_sources) $(bse_public_h_sources) $(bse_built_h_sources)
-libbseinclude_HEADERS = $(bse_public_h_sources) $(bse_built_h_sources)
+libbseinclude_HEADERS = $(bse_public_h_sources) $(bse_built_h_sources) bse.idl
 libbse_la_SOURCES = $(bse_c_sources) $(bse_proc_gen_sources)
 MAINTAINERCLEANFILES += $(bse_built_h_sources) $(bse_built_c_sources)
 EXTRA_HEADERS +=
