new stereo balance/panorama position module.
Sun Oct  5 08:12:51 2003  Tim Janik  <timj@gtk.org>

        * icons/balance.xcf:
        * icons/balance.png:
        * bsebalance.idl:
        * bsebalance.cc: new stereo balance/panorama position module.

svn path=/trunk/; revision=1320

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -72,6 +72,7 @@ CLEANFILES += $(plugins_built_sources) xgen-enums-*
 #
 plugin_idl_files = $(strip	\
 	davchorus.idl		\
+	bsebalance.idl		\
 )
 # setup generation of C++ plugins from idl files
 BSEPGEN = ../sfi/bse-plugin-generator
