--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -22,6 +22,7 @@ icon_list += sum.c
 icon_list += adsr.png
 icon_list += ampmix.png
 icon_list += atan.png
+icon_list += balance.png
 icon_list += canyon.png
 icon_list += chorus.png
 icon_list += drum.png
@@ -38,6 +39,7 @@ icon_list += sum.png
 icon_list += adsr.xcf
 icon_list += ampmix.xcf
 icon_list += atan.xcf
+icon_list += balance.xcf
 icon_list += canyon.xcf
 icon_list += chorus.xcf
 icon_list += cyria-filter.xcf
