tweaked part editing tools.
Mon Oct  6 10:40:17 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bsttrackrollctrl.[hc]: tweaked part editing tools.

        * beast-gtk/bstpianoroll.c (bst_piano_roll_draw_canvas): changed note
        borders so consequtive notes can be distinguished.
        (piano_roll_release_proxy): popdown toplevel when proxy is released.

        * docs/quickstart.texi: reflect changes.

svn path=/trunk/; revision=1332

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -57,6 +57,7 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_NOTE_16			$(srcdir)/note-16.png		\
 	STOCK_PALETTE			$(srcdir)/palette.png		\
 	STOCK_PART			$(srcdir)/part.png		\
+	STOCK_PART_TEXT			$(srcdir)/part-text.png		\
 	STOCK_PART_COPY			$(srcdir)/part-copy.png		\
 	STOCK_PART_EDITOR		$(srcdir)/part-editor.png	\
 	STOCK_PART_TOOL			$(srcdir)/part-tool.png		\
