--- a/.cvsignore
+++ b/.cvsignore
@@ -10,7 +10,14 @@ configure.h
 configure.h.in
 config.status
 config.cache
+intltool-extract
+intltool-extract.in
+intltool-merge
+intltool-merge.in
+intltool-update
+intltool-update.in
 autom4te.cache
 make-paths.h
+mkinstalldirs
 sfi.pc
 bse.pc
