--- a/configure.in
+++ b/configure.in
@@ -79,6 +79,17 @@ AC_PROG_MAKE_SET
 # Make sure else configure stuff exists.
 AC_CANONICAL_HOST
 
+# Initialize i18n
+ALL_LINGUAS=""
+AC_SUBST(ALL_LINGUAS)
+GETTEXT_PACKAGE=beast
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
+	[The package name, for gettext])
+AM_GLIB_DEFINE_LOCALEDIR(BEAST_LOCALEDIR)
+AM_GLIB_GNU_GETTEXT
+AC_PROG_INTLTOOL
+
 # declare --enable-* args and collect ac_help strings
 AC_ARG_ENABLE(debug,       [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
 AC_ARG_ENABLE(devel-rules, [  --enable-devel-rules=[no/yes]   turn on developer build rules],,)
@@ -526,6 +537,7 @@ beast-gtk/icons/Makefile
 beast-gtk/images/Makefile
 docs/Makefile
 docs/generated/Makefile
+po/Makefile.in
 test/Makefile
 bse/bseconfig.h
 sfi.pc
