fallback to ladspa icon instead of noicon icon if the module is a ladspa
Fri Oct 10 15:50:55 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetrouter.c:
        * beast-gtk/bstcanvassource.c: fallback to ladspa icon instead
        of noicon icon if the module is a ladspa plugin (and has no icon).

        * beast-gtk/icons/ladspa.png: variant of noicon.png.

        * beast-gtk/bstmenus.[hc]: allow adding single categories to a menu
        configuration.

svn path=/trunk/; revision=1349

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -48,6 +48,7 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_MUSIC_COPY		$(srcdir)/music-copy.png	\
 	STOCK_MUSIC_PASTE		$(srcdir)/music-paste.png	\
 	STOCK_NO_ICON			$(srcdir)/noicon.png		\
+	STOCK_LADSPA			$(srcdir)/ladspa.png		\
 	STOCK_NO_ILINK			$(srcdir)/no_ilink.png		\
 	STOCK_NO_OLINK			$(srcdir)/no_olink.png		\
 	STOCK_NOTE_1			$(srcdir)/note-1.png		\
