--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -3,7 +3,6 @@ icon_list += ball.c
 icon_list += biquad.c
 icon_list += const.c
 icon_list += disconnect.c
-icon_list += inoutport.c
 icon_list += inport.c
 icon_list += instrument.c
 icon_list += keyboard.c
@@ -18,23 +17,22 @@ icon_list += snet.c
 icon_list += snooper.c
 icon_list += song.c
 icon_list += speaker.c
+icon_list += subsynth.c
 icon_list += waveosc.c
 icon_list += ampctrl.xcf
 icon_list += ball.xcf
 icon_list += const.xcf
 icon_list += disconnect.xcf
-icon_list += inoutport.xcf
-icon_list += inport.xcf
 icon_list += instrument.xcf
 icon_list += keyboard.xcf
 icon_list += mic.xcf
 icon_list += midi.xcf
 icon_list += osc.xcf
-icon_list += outport.xcf
 icon_list += sheet.xcf
 icon_list += snet.xcf
 icon_list += snooper.xcf
 icon_list += song.xcf
 icon_list += speaker.xcf
+icon_list += virtual.xcf
 icon_list += waveosc.xcf
 ## Generated data ends here
