new file for small auxillary dialog implementations, contains string list
Sat Oct 11 17:54:01 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstauxdialogs.[hc]: new file for small auxillary dialog
        implementations, contains string list popup so far.

        * beast-gtk/bstfiledialog.[hc]: keep the last valid selection in
        self->selected. added select_dir() popup variant, added notification
        ability for valid selections.

        * beast-gtk/bstparam-entry.c: provide remove/add directory popup
        dialogs for entris containing search paths.

        * beast-gtk/bstparam.c (bst_param_rack_widget): action widgets may
        have a parent already, so return the toplevel container of an action
        widget.

        * beast-gtk/bstutils.[hc]: added stock ids, helper functions to create
        stock buttons, and utility functions for h/v box packing.

svn path=/trunk/; revision=1351

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -46,7 +46,7 @@ beast_headers = $(strip \
 	bstwavereposhell.h	bstwaveview.h	bstsongshell.h		bstxkb.h	\
 	bstzoomedwindow.h	glewidgets.h	bsttrackrollctrl.h	bstxframe.h	\
 	bstactivatable.h	bstcatalog.h	bsttreestores.h		bstutils.h	\
-				bstsegment.h	bsteventrollctrl.h	bsteventroll.h	\
+	bstauxdialogs.h		bstsegment.h	bsteventrollctrl.h	bsteventroll.h	\
 	bstmarshal.h bstdefs.h \
 )
 # BEAST c sources to build the program from
@@ -65,7 +65,7 @@ beast_sources = $(strip \
 	bstwavereposhell.c	bstwaveview.c	bstsongshell.c		bstxkb.c	\
 	bstzoomedwindow.c	glewidgets.c	bsttrackrollctrl.c	bstxframe.c	\
 	bstactivatable.c	bstcatalog.c	bsttreestores.c		bstutils.c	\
-				bstsegment.c	bsteventrollctrl.c	bsteventroll.c	\
+	bstauxdialogs.c		bstsegment.c	bsteventrollctrl.c	bsteventroll.c	\
 	$(PROFILE_SOURCE) \
 )
 # BEAST sources that get included (don't have own .lo rules)
